<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name" translatable="false">车管家服务版</string>
    <string name="rmb" translatable="false">￥</string>

    <!-- 登陆 -->


    <!-- 注册 -->
    <string name="register_introduce1" translatable="false">车管家与专业4S店和技师合作，为车主提供专业又低价的保养、维修、救援等服务，同时获得相应的报酬。</string>
    <string name="register_introduce2" translatable="false">你提交一下资料，将会由车管家的师傅联系你。通过线下资质认证后就可以提供服务并获取报酬了。</string>

    <!-- 保养订单 -->
    <string name="maintenance_order_lc" translatable="false">当前里程</string>
    <string name="maintenance_order_gl" translatable="false">公里</string>
    <string name="maintenance_order_wsdd" translatable="false">完善订单</string>
    <string name="maintenance_order_zdxz" translatable="false">自动选择</string>
    <string name="maintenance_order_fwf" translatable="false">服务方</string>
    <string name="maintenance_order_fwfs" translatable="false">服务方式</string>
    <string name="maintenance_order_qc" translatable="false">取车</string>
    <string name="maintenance_order_hc" translatable="false">还车</string>
    <string name="maintenance_order_sgd" translatable="false">施工点</string>
    <string name="maintenance_order_didian" translatable="false">北京市朝阳区东四环中路41号</string>
    <string name="maintenance_order_shijian" translatable="false">1月22日 16:30</string>
    <string name="maintenance_order_zdfp" translatable="false">自动分配</string>
    <string name="maintenance_order_fpgjscd">分配给技师抢单</string>
    <string name="maintenance_order_apgw">安排工位</string>
    <string name="maintenance_order_ap">安排</string>
    <string name="maintenance_order_appj">安排配件</string>
    <string name="maintenance_order_tzpj">通知配件</string>
    <string name="maintenance_order_tjms">添加描述</string>
    <string name="maintenance_order_jjchms">经检测如果补充增项请填写</string>
    <string name="maintenance_order_xmzx">项目增项</string>
    <string name="maintenance_order_wcztgtp">为车主提供3-5张施工过程图片</string>
    <string name="maintenance_order_gtdfwgpj">给他的服务评价一下吧</string>
    <string name="maintenance_order_ggpj">评价说明</string>
    <string name="maintenance_order_gmrq">购买日期</string>
    <string name="maintenance_order_cjh">车架号</string>
    <string name="maintenance_order_yc">验车</string>

    <!-- other订单 -->
    <string name="other_dd">订单</string>
    <string name="other_order_states">待确认</string>
    <string name="other_order_czxx">车主信息</string>
    <string name="other_order_czdh">车主电话</string>
    <string name="other_order_cx">车型</string>
    <string name="other_order_khxczp">客户现场照片</string>
    <string name="other_order_wsdd">完善订单</string>
    <string name="other_order_xmmx">项目明细</string>
    <string name="other_order_sfsmfw">是否上门服务</string>
    <string name="other_order_sfqsc">是否取送车</string>
    <string name="other_order_khdz">客户地址</string>
    <string name="other_order_gdsm">更多说明</string>
    <string name="other_order_kx">(可选)</string>
    <string name="other_order_cxdm">宝马5X 2012年款 3.5L 自动档</string>
    <string name="other_order_commit">订单准备完成</string>
    <!-- 提现 -->
    <string name="withdraw_title">申请</string>
    <string name="withdraw_bank">中国建设银行</string>
    <string name="withdraw_bank_count">尾号 9999</string>
    <string name="withdraw_bank_kind">储蓄卡</string>
    <string name="withdraw_count">转出金额</string>
    <string name="withdraw_input_hint">请输入转出金额</string>
    <string name="withdraw_limit">1，每次体现金额大于100元\n\n2，不足100元的将在月底自动转到银行卡里面\n\n3，提现额度不大于账户余额</string>
    <string name="withdraw_commit">确认转出</string>

    <!-- 我的收入 -->
    <string name="myget_title">我的收入</string>
    <string name="myget_balance">账户余额</string>
    <string name="myget_yesterday">昨天收入</string>
    <string name="myget_days30">近30天收入</string>
    <string name="myget_total">累计收入</string>

    <!-- 4s店订单 -->
    <string name="order4s_repair">维修</string>
    <string name="order4s_sendor">送车管家:</string>
    <string name="order4s_sendtime">送达时间:</string>
    <string name="order4s_repair_states">待安排工位</string>
    <string name="order4s_repair_car">购于2010_1300公里</string>

    <!-- 项目增项 -->
    <string name="orderadd_service_kind">服务项目</string>
    <string name="orderadd_service_reason">原因</string>
    <string name="orderadd_parts">原厂/正品配件</string>
    <string name="orderadd_price">单价(折后价)</string>
    <string name="orderadd_number">数量</string>
    <string name="orderadd_gs_price">工时单价</string>
    <string name="orderadd_gs_number">工时数量</string>
    <string name="orderadd_continue">继续添加</string>
    <string name="orderadd_commit">提交</string>

    <!-- 服务已完成 -->
    <string name="order_finish">服务已完成</string>
    <!-- 关于我们 -->
    <string name="about_name">叮咚车管家</string>
    <string name="about_version">V1.0.0</string>
    <string name="about_company">北京爱自由汽车信息技术有限公司</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_my_income">MyIncomeActivity</string>
    <string name="title_activity_withdraw">WithdrawActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_income">IncomeActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_feedback">FeedbackActivity</string>
    <string name="title_activity_register_submit">RegisterSubmitActivity</string>
    <string name="title_activity_good_at_brand">GoodAtBrandActivity</string>
    
    
</resources>
